src/test/deca/context/invalid/provided/test3.deca
{
  // list decl var
  if (7 == 1)
  {
    println("HELLO");
  }
  else
  {
    println(7);
  }
  while (!(1.6 < -8))
  {
   print(77);
  }
}
